<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">konio</string>
    <string name="action_logout">logout</string>
    <string name="login_button_text">login</string>
    <string name="password">password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_dialog_title">Start payment</string>
    <string name="global_positive">yes</string>
    <string name="global_negative">no</string>
    <string name="pay_cancel">payment canceled</string>
    <string name="qr_code_not_valid">QR-code not valid</string>
    <string name="location_dialog_title">Message from location</string>
    <string name="ok">ok</string>
    <string name="remember_me">remember me</string>
    <string name="network_error">network error</string>
    <string name="open_in_browser">open in browser</string>
    <string name="unknown_device">unknown device</string>
    <string name="amount">amount</string>
    <string name="recipient">recipient</string>
    <string name="cancel">cancel</string>
    <string name="accept">accept</string>
    <string name="data_error">error in received data</string>
    <string name="unable_to_login">unable to login</string>

</resources>
