<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp"
    tools:mContext=".MainActivity$LoginFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/login_button_text"
        android:id="@+id/login_text"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:password="true"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp" />

        <Switch
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:id="@+id/rememberMeSwitch"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:gravity="center|center_horizontal|clip_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        </LinearLayout>


    <Button
        android:text="@string/login_button_text"
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
    </Button>

</LinearLayout>
