<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="500dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/pay_popup_subject"
        android:text="Buy Stuff"
        android:gravity="center"
        android:textSize="@dimen/abc_text_size_display_2_material"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:gravity="center"
        android:text="message"
        android:layout_marginTop="20dp"
        android:id="@+id/pay_message" />

    <!--//    {-->
    <!--//        "data": {-->
    <!--//        "amount": 40,-->
    <!--//                "id": "038db039759f0c32e0b75b782350c8ff",-->
    <!--//                "items": [],-->
    <!--//        "subject": "Testing !",-->
    <!--//                "pay_from": {-->
    <!--//            "credits": "Credits Account"-->
    <!--//        },-->
    <!--//        "recipient": "Demo Account",-->
    <!--//                "options": [],-->
    <!--//        "currency": "usd"-->
    <!--//    },-->
    <!--//        "message": "start payment",-->
    <!--//            "status": 1-->
    <!--//    }-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
            >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="@string/recipient"
                    android:id="@+id/pay_recipient" />
                <TextView
                    android:paddingLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="#000000"
                    android:text="recipient name"
                    android:id="@+id/pay_recipient_name"
                    android:gravity="center_vertical|left"
                    android:layout_weight="1" />
                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:gravity="center_vertical"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account_spinner"
                android:gravity="center_vertical|left"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|left"
                android:spinnerMode="dialog"
                android:textAlignment="gravity"
                android:touchscreenBlocksFocus="false">
                </Spinner>


            </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="fill_horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/pay_amount"
                android:text="@string/amount"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:visibility="visible"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text="USD"
                android:textColor="#000000"
                android:id="@+id/pay_currency"
                android:layout_column="1"
                android:visibility="gone"
                android:layout_gravity="center_vertical|right"
                android:paddingLeft="0dp"
                android:gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text=""
                android:textColor="#000000"
                android:gravity="center"
                android:id="@+id/pay_amount_value"
                android:visibility="gone"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="1" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:text=""
                android:textColor="#000000"
                android:id="@+id/pay_amount_editable"
                android:gravity="center_vertical|right"
                android:layout_weight="1"
                android:numeric="decimal"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:visibility="gone"
                android:layout_gravity="right" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amount_spinner"
                android:gravity="center_vertical"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|left"
                android:spinnerMode="dialog"
                android:visibility="gone"
                android:textAlignment="gravity"
                android:touchscreenBlocksFocus="false">
            </Spinner>

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/pay_button_cancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/pay_button_accept"
            android:layout_weight="1"
            />
        </LinearLayout>

</LinearLayout>